--- a/app/src/main/res/values/colors.xml
+++ b/app/src/main/res/values/colors.xml
@@ -6,4 +6,6 @@
     <color name="text_black">#1D1B20</color>
     <color name="blue">#00BDD3</color>
     <color name="gray">#636363</color>
+    <color name="red">#CB3D40</color>
+
 </resources>
