--- a/app/src/main/res/values/themes.xml
+++ b/app/src/main/res/values/themes.xml
@@ -28,13 +28,27 @@
         <item name="android:textColor">@color/text_black</item>
     </style>
 
+    <style name="BlueText16">
+        <item name="fontFamily">@font/nunito_sans_regular</item>
+        <item name="android:textSize">16sp</item>
+        <item name="textAllCaps">false</item>
+        <item name="android:textColor">@color/blue</item>
+    </style>
+
     <style name="GrayText16">
         <item name="fontFamily">@font/nunito_sans_regular</item>
         <item name="android:textSize">16sp</item>
         <item name="textAllCaps">false</item>
         <item name="android:textColor">@color/gray</item>
     </style>
-    
+
+    <style name="RedText14">
+        <item name="fontFamily">@font/nunito_sans_regular</item>
+        <item name="android:textSize">14sp</item>
+        <item name="android:textColor">@color/red</item>
+        <item name="textAllCaps">false</item>
+    </style>
+
     <style name="RoundedImage">
         <item name="cornerFamily">rounded</item>
         <item name="cornerSize">50%</item>
